--- a/index.html
+++ b/index.html
@@ -91,10 +91,13 @@
       <div class="newsletter__container max__width">
         <div class="newsletter__left">
           <img src="./assets/images/ui/mail-send-line (1).png" alt="" />
-          <h3>Fique por dentro das promoções</h3>
+          <div>
+          <h3>Fique por dentro das promoções!</h3>
+          <p>Coloque seu e-mail e seja o primeiro a saber</p>
+          </div>
         </div>
         <div class="newsletter__right">
-          <input class="send-email"  type="text" placeholder="Qual seu e-mail?" />
+          <input class="send-email input"  type="text" placeholder="Qual seu e-mail?" />
           <button>Enviar</button>
         </div>
       </div>
