--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="header__right">
           <input class="search" type="text" placeholder="O que você procura?" />
 
-          <a href="login.html" class="btn__icon">
+          <a href="login.html"  class="btn__icon">
             <img src=".//assets/images/ui/user-line.png" alt="login" />
           </a>
 
@@ -87,21 +87,82 @@
 
     <main>Conteudo</main>
 
-    <section class="newsletter ">
+    <section class="newsletter">
       <div class="newsletter__container max__width">
         <div class="newsletter__left">
           <img src="./assets/images/ui/mail-send-line (1).png" alt="" />
           <div>
-          <h3>Fique por dentro das promoções!</h3>
-          <p>Coloque seu e-mail e seja o primeiro a saber</p>
+            <h3>Fique por dentro das promoções!</h3>
+            <p>Coloque seu e-mail e seja o primeiro a saber</p>
           </div>
         </div>
         <div class="newsletter__right">
-          <input class="send-email input"  type="text" placeholder="Qual seu e-mail?" />
+          <input
+            class="send-email input"
+            type="text"
+            placeholder="Qual seu e-mail?"
+          />
           <button>Enviar</button>
         </div>
       </div>
     </section>
+
+    <footer>
+      <div class="footer__container max__width">
+        <div class="footer__menu">
+          <!-- logo -->
+          <a href="" class="footer__logo">
+            <img src="/assets/images/ui/Logo-1.PNG" alt="logo" />
+          </a>
+
+          <!-- menu -->
+          <ul>
+            <li><a href="#">Início</a></li>
+            <li><a href="produtos.html">Produtos</a></li>
+            <li><a href="#footer">contato</a></li>
+          </ul>
+        </div>
+
+        <!-- footer Contatos -->
+<div class="footer__contatos">
+        <div class="contatos">
+          <div class="contatos__titulo">Precisa de Ajuda?</div>
+          <div class="contatos__icones">
+            <div class="btn__icon__text">
+              <img src="/assets/images/ui/mail-line.png" alt="email" />
+              <span>Email@email.com</span>
+            </div>
+
+            <div class="btn__icon__text">
+              <img src="/assets/images/ui/phone-line.png" alt="email" />
+              <span>(019) 9999-9999</span>
+            </div>
+          </div>
+        </div>
+
+        <div class="social">
+            <div class="social__titulo">Acompanhe nas redes sociais</div>
+            <div class="social__icones">
+                  <a class="btn__icon" href="">
+                        <img src="/assets/images/ui/facebook-line.png" alt="facebook">
+                  </a>
+                  <a class="btn__icon" href="">
+                        <img src="/assets/images/ui/instagram-line.png" alt="instagram">
+                  </a>
+            </div>
+        </div>
+      </div>
+      </div>
+
+      <!-- Footer direito autorais -->
+       <div class="footer__bottom">
+            <div class="copyright">
+                  <p>Copyright © 2025 - TODOS OS DIREITOS RESERVADOS</p>
+            </div>
+       </div>
+
+
+    </footer>
 
     <!-- Scripts Javascripts -->
     <script type="text/javascript" src="./scripts/js/header.js"></script>
