Criação do BANNER

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         <div class="header__right">
           <input class="search" type="text" placeholder="O que você procura?" />
 
-          <a href="login.html"  class="btn__icon">
+          <a href="login.html" class="btn__icon">
             <img src=".//assets/images/ui/user-line.png" alt="login" />
           </a>
 
@@ -84,8 +84,32 @@
         <input class="search" type="text" placeholder="O que você procura?" />
       </div>
     </header>
+    <!-- Banners -->
+    <main>
+      <section class="banner">
+        <div class="banner__area">
+          <a href="produtos.html" >
+            <img src="/assets/images/ui/Bannerr-1.png" alt="">
+          </a>
 
-    <main>Conteudo</main>
+          <a href="produtos.html " class="active">
+            <img src="/assets/images/ui/Banner-2.png" alt="">
+          </a>
+
+          <a href="produtos.html" >
+            <img src="./assets/images/ui/Banner- 3.png" alt="">
+          </a>
+        </div>
+
+        <div class="banner__counter__area">
+            <div class="banner__counter">
+                  <div class="banner__counter__item">
+                        <div class="banner__counter__item"></div>
+                  </div>
+            </div>
+        </div>
+      </section>
+  </main>
 
     <section class="newsletter">
       <div class="newsletter__container max__width">
@@ -124,44 +148,45 @@
         </div>
 
         <!-- footer Contatos -->
-<div class="footer__contatos">
-        <div class="contatos">
-          <div class="contatos__titulo">Precisa de Ajuda?</div>
-          <div class="contatos__icones">
-            <div class="btn__icon__text">
-              <img src="/assets/images/ui/mail-line.png" alt="email" />
-              <span>Email@email.com</span>
-            </div>
+        <div class="footer__contatos">
+          <div class="contatos">
+            <div class="contatos__titulo">Precisa de Ajuda?</div>
+            <div class="contatos__icones">
+              <div class="btn__icon__text">
+                <img src="/assets/images/ui/mail-line.png" alt="email" />
+                <span>Email@email.com</span>
+              </div>
 
-            <div class="btn__icon__text">
-              <img src="/assets/images/ui/phone-line.png" alt="email" />
-              <span>(019) 9999-9999</span>
+              <div class="btn__icon__text">
+                <img src="/assets/images/ui/phone-line.png" alt="email" />
+                <span>(019) 9999-9999</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="social">
+            <div class="social__titulo">Acompanhe nas redes sociais</div>
+            <div class="social__icones">
+              <a class="btn__icon" href="">
+                <img src="/assets/images/ui/facebook-line.png" alt="facebook" />
+              </a>
+              <a class="btn__icon" href="">
+                <img
+                  src="/assets/images/ui/instagram-line.png"
+                  alt="instagram"
+                />
+              </a>
             </div>
           </div>
         </div>
-
-        <div class="social">
-            <div class="social__titulo">Acompanhe nas redes sociais</div>
-            <div class="social__icones">
-                  <a class="btn__icon" href="">
-                        <img src="/assets/images/ui/facebook-line.png" alt="facebook">
-                  </a>
-                  <a class="btn__icon" href="">
-                        <img src="/assets/images/ui/instagram-line.png" alt="instagram">
-                  </a>
-            </div>
-        </div>
-      </div>
       </div>
 
       <!-- Footer direito autorais -->
-       <div class="footer__bottom">
-            <div class="copyright">
-                  <p>Copyright © 2025 - TODOS OS DIREITOS RESERVADOS</p>
-            </div>
-       </div>
-
-
+      <div class="footer__bottom">
+        <div class="copyright">
+          <p>Copyright © 2025 - TODOS OS DIREITOS RESERVADOS</p>
+        </div>
+      </div>
     </footer>
 
     <!-- Scripts Javascripts -->
