conexão com banco de dados

--- a/login.html
+++ b/login.html
@@ -101,7 +101,7 @@
       <div class="login-title">Faça o seu login</div>
       <div class="login-subtitle">Insira seus dados e faça login</div>
 
-      <form class="login-form" action="#" method="post">
+      <form class="login-form" action="login.php" method="post">
         <label for="email">E-mail</label>
         <input type="email" id="email" name="email" placeholder="Digite seu e-mail" required />
 
