adicionado carrinho de compras

--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
             <img src=".//assets/images/ui/heart-3-line.png" alt="favoritos" />
           </a>
 
-          <a href="checkout" class="btn__icon">
+          <a href="carrinho.php" class="btn__icon">
             <img
               src=".//assets/images/ui/shopping-bag-4-line.png"
-              alt="checkout"
+              alt="carrinho"
             />
           </a>
           <!-- Menu - Mobile -->
