Banner & Avisos Finalizados

--- a/index.html
+++ b/index.html
@@ -88,26 +88,60 @@
     <main>
       <section class="banner">
         <div class="banner__area">
-          <a href="produtos.html" >
-            <img src="/assets/images/ui/Bannerr-1.png" alt="">
-          </a>
-
-          <a href="produtos.html " class="active">
+          
+          <a href="produtos.html " >
             <img src="/assets/images/ui/Banner-2.png" alt="">
           </a>
+                 </div>
+               </div>
+      </section>
 
-          <a href="produtos.html" >
-            <img src="./assets/images/ui/Banner- 3.png" alt="">
-          </a>
-        </div>
+      <section class="avisos ">
 
-        <div class="banner__counter__area">
-            <div class="banner__counter">
-                  <div class="banner__counter__item">
-                        <div class="banner__counter__item"></div>
+            <div class="avisos__container max__width">
+
+            <div class="aviso ">
+                  <div class="aviso__icon">
+                        <img src="/assets/images/ui/truck-line.png" alt="">
+                  </div>
+                  <div class="aviso__info">
+                  <div class="aviso__titulo">
+                        Frete Grátis
+                  </div>
+                  <div class="aviso__subtitulo">
+                        Para todo o Sudeste.
+                  </div>
                   </div>
             </div>
-        </div>
+            <div class="aviso">
+                  <div class="aviso__icon">
+                        <img src="/assets/images/ui/discount-percent-line.png" alt="">
+                  </div>
+                  <div class="aviso__info">
+                        <div class="aviso__titulo">
+                              Muitas Ofertas
+                        </div>
+                        <div class="aviso__subtitulo">
+                        Ofertas imbatíveis.
+                        </div>
+                        </div>
+                  </div>
+            
+
+            <div class="aviso">
+                  <div class="aviso__icon">
+                        <img src="/assets/images/ui/user-line-2.png" alt="">
+                  </div>
+                  <div class="aviso__info">
+                        <div class="aviso__titulo">
+                        Cadastre-se
+                        </div>
+                        <div class="aviso__subtitulo">
+                        20% de desconto.
+                        </div>
+                  </div>
+            </div>
+            </div>
       </section>
   </main>
 
