Página Inicial Finalizada

--- a/index.html
+++ b/index.html
@@ -143,6 +143,94 @@
             </div>
             </div>
       </section>
+
+      <!-- Produtos  -->
+
+      <section class="produtos">
+            <div class="produtos__container max__width">
+                  <div class="produtos__list">
+            <h4>Produtos mais vistos</h4>
+            <h5>Campeões de visualização da nossa loja.</h5>
+            <div class="produtos__area">
+                 <div class="produto__item">
+                        <div class="produto__foto">
+                              <a href="">
+                                    <img src="/assets/images/ui/caixa-mdf-batismo.png" alt="">
+                              </a>
+                        </div>
+                        <div class="produto__nome">Caixas Convites - Batismo </div>
+                        <div class="produto__preco">R$ 50,00</div>
+                        <div class="produto__info">Pagamento via PIX </div>
+                 </div>
+
+                 <div class="produto__item">
+                        <div class="produto__foto">
+                              <a href="">
+                                    <img src="/assets/images/ui/caixa-papel-casamento-removebg-preview.png" alt=""  >
+                              </a>
+                        </div>
+                        <div class="produto__nome">Caixas Convites - Batismo </div>
+                        <div class="produto__preco">R$ 50,00</div>
+                        <div class="produto__info">Pagamento via PIX </div>
+                 </div>
+
+                 <div class="produto__item">
+                        <div class="produto__foto">
+                              <a href="">
+                                    <img src="/assets/images/ui/foto-caixa-batismo.png" alt=""  >
+                              </a>
+                        </div>
+                        <div class="produto__nome">Caixas Convites - Batismo </div>
+                        <div class="produto__preco">R$ 50,00</div>
+                        <div class="produto__info">Pagamento via PIX </div>
+                 </div>
+            </div>
+            </div>
+</div>
+      </section>
+
+   <section class="produtos">
+            <div class="produtos__container max__width">
+                  <div class="produtos__list">
+            <h4>Produtos mais vendidos</h4>
+            <h5>Campeões de venda da nossa loja.</h5>
+            <div class="produtos__area">
+                 <div class="produto__item">
+                        <div class="produto__foto">
+                              <a href="">
+                                    <img src="/assets/images/ui/caixa-mdf-batismo.png" alt="" >
+                              </a>
+                        </div>
+                        <div class="produto__nome">Caixas Convites - Batismo </div>
+                        <div class="produto__preco">R$ 50,00</div>
+                        <div class="produto__info">Pagamento via PIX </div>
+                 </div>
+
+                 <div class="produto__item">
+                        <div class="produto__foto">
+                              <a href="">
+                                    <img src="/assets/images/ui/caixa-papel-casamento-removebg-preview.png" alt="" >
+                              </a>
+                        </div>
+                        <div class="produto__nome">Caixas Convites - Batismo </div>
+                        <div class="produto__preco">R$ 50,00</div>
+                        <div class="produto__info">Pagamento via PIX </div>
+                 </div>
+
+                 <div class="produto__item">
+                        <div class="produto__foto">
+                              <a href="">
+                                    <img src="/assets/images/ui/foto-caixa-bombom-batismo-removebg-preview.png" alt="">
+                              </a>
+                        </div>
+                        <div class="produto__nome">Caixas Convites - Batismo </div>
+                        <div class="produto__preco">R$ 50,00</div>
+                        <div class="produto__info">Pagamento via PIX </div>
+                 </div>
+            </div>
+            </div>
+</div>
+      </section>
   </main>
 
     <section class="newsletter">
