--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <ul>
             <li><a href="#">Início</a></li>
             <li><a href="produtos.html">Produtos</a></li>
-            <li><a href="contato.html">Contato</a></li>
+            <li><a href="#footer">Contato</a></li>
           </ul>
         </div>
         <div class="header__right">
@@ -254,7 +254,7 @@
     </section>
 
     <footer>
-      <div class="footer__container max__width">
+      <div id=footer class="footer__container max__width">
         <div class="footer__menu">
           <!-- logo -->
           <a href="" class="footer__logo">
