Acertando footer mobile

--- a/index.html
+++ b/index.html
@@ -56,9 +56,7 @@
             <img src=".//assets/images/ui/user-line.png" alt="login" />
           </a>
 
-          <a href="favoritos.html" class="btn__icon">
-            <img src=".//assets/images/ui/heart-3-line.png" alt="favoritos" />
-          </a>
+          
 
           <a href="carrinho.php" class="btn__icon">
             <img
@@ -76,7 +74,7 @@
       <div class="header__menu__burger">
         <a href="#">Início</a>
         <a href="produtos.html">Produtos</a>
-        <a href="contato.html">Contato</a>
+        <a href="#footer">Contato</a>
       </div>
 
       <!-- Barra de pesquisa - mobile-->
