--- a/produtos.html
+++ b/produtos.html
@@ -44,7 +44,7 @@
           </a>
 
           <ul>
-            <li><a href="#">Início</a></li>
+            <li><a href="index.html">Início</a></li>
             <li><a href="produtos.html">Produtos</a></li>
             <li><a href="#footer">Contato</a></li>
           </ul>
