--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
           
 
-          <a href="carrinho.php" class="btn__icon">
+          <a href="carrinho.html" class="btn__icon">
             <img
               src="./assets/images/ui/shopping-bag-4-line.png"
               alt="carrinho"
@@ -73,7 +73,7 @@
 
       <div class="header__menu__burger">
         <a href="#">Início</a>
-        <a href="produtos.html">Produtos</a>
+        <a href="produtos.php">Produtos</a>
         <a href="#">Contato</a>
       </div>
 
