--- a/checkout.html
+++ b/checkout.html
@@ -84,7 +84,7 @@
                 </div>
               </div>
               <div class="produto__info2">
-                <div class="produto__preco">R$ 100.00</div>
+                <div class="produto__preco"></div>
                 <div class="btn__icon">
                   <img src="./assets/images/ui/delete-bin-line.png" alt="" />
                 </div>
