--- a/checkout.html
+++ b/checkout.html
@@ -1,13 +1,11 @@
+<!-- checkout.html corrigido -->
 <!DOCTYPE html>
 <html lang="pt_br">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Icone do site -->
     <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
-    <!-- CSS -->
     <link rel="stylesheet" href="./css/extends.css" />
-    <!-- TITULO -->
     <title>Realizart - Docê jeito de convidar</title>
   </head>
   <body>
@@ -17,7 +15,6 @@
           <a href="index.php" class="logo">
             <img src="./assets/images/ui/Logo-1.PNG" alt="" />
           </a>
-
           <ul>
             <li><a href="index.html">Início</a></li>
             <li><a href="produtos.html">Produtos</a></li>
@@ -26,31 +23,22 @@
         </div>
         <div class="header__right">
           <input class="search" type="text" placeholder="O que você procura?" />
-
           <a href="login.php" class="btn__icon">
             <img src="./assets/images/ui/user-line.png" alt="login" />
           </a>
-
           <a href="checkout.html" class="btn__icon">
-            <img
-              src="./assets/images/ui/shopping-bag-4-line.png"
-              alt="carrinho"
-            />
+            <img src="./assets/images/ui/shopping-bag-4-line.png" alt="carrinho" />
           </a>
-          <!-- Menu - Mobile -->
           <a class="btn__icon menu__burger">
             <img src=".//assets/images/ui/menu-line.png" alt="menu" />
           </a>
         </div>
       </div>
-
       <div class="header__menu__burger">
         <a href="index.html">Início</a>
         <a href="produtos.html">Produtos</a>
         <a href="#footer">Contato</a>
       </div>
-
-      <!-- Barra de pesquisa - mobile-->
       <div class="header__search">
         <input class="search" type="text" placeholder="O que você procura?" />
       </div>
@@ -59,37 +47,17 @@
     <main class="max__width">
       <section class="checkout__header">
         <img src=".//assets/images/ui/shopping-bag-4-line.png" alt="" />
-        <div>Seu carrinho de compras <span>( 4 itens )</span></div>
+        <div>Seu carrinho de compras <span>(0 itens)</span></div>
       </section>
 
       <section class="checkout">
         <div class="produtos">
           <div class="produtos_area">
-
             <div class="produto__header">
-                  <div class="produto__header__prod">Produto</div>
-                  <div class="produto__header__price">Preço</div>
+              <div class="produto__header__prod">Produto</div>
+              <div class="produto__header__price">Preço</div>
             </div>
-
-            <div class="produto">
-              <div class="produto__foto">
-                <img src="./assets/images/ui/caixa-mdf-batismo.png" alt="" />
-              </div>
-              <div class="produto__info">
-                <div class="produto__nome">caixinha</div>
-                <div class="produto__qtd">
-                  <div class="btn__icon">-</div>
-                  <div class="produto__qtd__text">01</div>
-                  <div class="btn__icon">+</div>
-                </div>
-              </div>
-              <div class="produto__info2">
-                <div class="produto__preco"></div>
-                <div class="btn__icon">
-                  <img src="./assets/images/ui/delete-bin-line.png" alt="" />
-                </div>
-              </div>
-            </div>
+            <!-- Produtos serão inseridos dinamicamente aqui -->
           </div>
         </div>
 
@@ -98,11 +66,7 @@
           <div class="shipping">
             <div>Calcular frete:</div>
             <div class="shipping__input">
-              <input
-                type="text"
-                class="input"
-                placeholder="Digite aqui o CEP"
-              />
+              <input type="text" class="input" placeholder="Digite aqui o CEP" />
               <button>Calcular</button>
             </div>
           </div>
@@ -118,18 +82,18 @@
           <div class="subtotal">
             <div class="area">
               <div class="left">Subtotal</div>
-              <div class="right">R$ 140,00</div>
+              <div class="right">R$ 0,00</div>
             </div>
 
             <div class="area divisor">
               <div class="left">Frete</div>
-              <div class="right">...</div>
+              <div class="right">R$ 15,00</div>
             </div>
 
             <div class="area">
               <div class="left">Total</div>
               <div class="right">
-                <div class="total">R$ 160.00</div>
+                <div class="total">R$ 0,00</div>
               </div>
             </div>
 
@@ -146,20 +110,15 @@
     <footer>
       <div id="footer" class="footer__container max__width">
         <div class="footer__menu">
-          <!-- logo -->
           <a href="" class="footer__logo">
             <img src="./assets/images/ui/Logo-1.PNG" alt="logo" />
           </a>
-
-          <!-- menu -->
           <ul>
             <li><a href="index.php">Início</a></li>
             <li><a href="#">Produtos</a></li>
             <li><a href="#footer">contato</a></li>
           </ul>
         </div>
-
-        <!-- footer Contatos -->
         <div class="footer__contatos">
           <div class="contatos">
             <div class="contatos__titulo">Precisa de Ajuda?</div>
@@ -168,35 +127,25 @@
                 <img src="./assets/images/ui/mail-line.png" alt="email" />
                 <span>Email@email.com</span>
               </div>
-
               <div class="btn__icon__text">
-                <img src="./assets/images/ui/phone-line.png" alt="email" />
+                <img src="./assets/images/ui/phone-line.png" alt="telefone" />
                 <span>(019) 9999-9999</span>
               </div>
             </div>
           </div>
-
           <div class="social">
             <div class="social__titulo">Acompanhe nas redes sociais</div>
             <div class="social__icones">
               <a class="btn__icon" href="">
-                <img
-                  src="./assets/images/ui/facebook-line.png"
-                  alt="facebook"
-                />
+                <img src="./assets/images/ui/facebook-line.png" alt="facebook" />
               </a>
               <a class="btn__icon" href="">
-                <img
-                  src="./assets/images/ui/instagram-line.png"
-                  alt="instagram"
-                />
+                <img src="./assets/images/ui/instagram-line.png" alt="instagram" />
               </a>
             </div>
           </div>
         </div>
       </div>
-
-      <!-- Footer direito autorais -->
       <div class="footer__bottom">
         <div class="copyright">
           <p>Copyright © 2025 - TODOS OS DIREITOS RESERVADOS</p>
@@ -204,8 +153,6 @@
       </div>
     </footer>
 
-    <script type="text/javascript" src="./scripts/js/checkout.js"></script>
-    <script type="text/javascript" src="./scripts/js/produtos.js"></script>
-    <script type="text/javascript" src="./scripts/js/header.js"></script>
+    <script src="checkout.js"></script>
   </body>
 </html>
