--- a/produtounic.html
+++ b/produtounic.html
@@ -56,7 +56,7 @@
             <img src="./assets/images/ui/user-line.png" alt="login" />
           </a>
 
-          <a href="carrinho.html" class="btn__icon">
+          <a href="checkout.html" class="btn__icon">
             <img
               src="./assets/images/ui/shopping-bag-4-line.png"
               alt="carrinho"
