--- a/produtounic.html
+++ b/produtounic.html
@@ -97,8 +97,8 @@
           <div class="price__to"></div>
           <div class="payments">Pagamento via PIX</div>
           <div class="buttons">
-            
-            <button>Adicionar ao carrinho</button>
+            <button class="btn-comprar">Comprar agora</button>
+            <button class="btn-adicionar">Adicionar ao carrinho</button>
           </div>
           <div class="shipping">
             <div>Calcular frete:</div>
