--- a/checkout.html
+++ b/checkout.html
@@ -153,6 +153,6 @@
       </div>
     </footer>
 
-    <script src="checkout.js"></script>
+        <script type="text/javascript" src="./scripts/js/checkout.js"></script>
   </body>
 </html>
