--- a/produtounic.html
+++ b/produtounic.html
@@ -97,7 +97,7 @@
           <div class="price__to"></div>
           <div class="payments">Pagamento via PIX</div>
           <div class="buttons">
-            <button class="btn-comprar">Comprar agora</button>
+            <button class="btn-comprar">Ir para o carrinho</button>
             <button class="btn-adicionar">Adicionar ao carrinho</button>
           </div>
           <div class="shipping">
@@ -184,9 +184,10 @@
         </div>
       </div>
     </footer>
-
-    <script type="text/javascript" src="./scripts/js/produtounic.js"></script>
+produtounic.js
+    <script type="text/javascript" src="./scripts/js/checkout.js"></script>
     <script type="text/javascript" src="./scripts/js/produtos.js"></script>
     <script type="text/javascript" src="./scripts/js/header.js"></script>
+    <script type="text/javascript" src="./scripts/js/produtounic.js"></script>
   </body>
 </html>
