alterando icone do carrinho

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
           
 
-          <a href="carrinho.html" class="btn__icon">
+          <a href="checkout.html" class="btn__icon">
             <img
               src="./assets/images/ui/shopping-bag-4-line.png"
               alt="carrinho"
