atualizando email e telefone

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <div class="header__top__right">
           <div class="icon__header">
             <img src=".//assets/images/ui/mail-line.png" alt="email" />
-            <span>teste@email.com.br</span>
+            <span>realizartatelie@gmail.com</span>
 
             <img src=".//assets/images/ui/phone-line.png" alt="telefone" />
-            <span>(019) 9999-9999</span>
+            <span>(019) 97817-3545</span>
           </div>
         </div>
       </div>
